--- a/index.html
+++ b/index.html
@@ -4,8 +4,133 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    Portfolio Website
+    <!-- navbar -->
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="#"
+            ><span>#</span>Portfolio<span>#</span></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="projects.html">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="container">
+      <!-- Intro section -->
+      <section class="intro">
+        <div
+          class="vh-100 d-flex flex-column justify-content-center align-items-center"
+        >
+          <img
+            class="rounded-circle shadow-lg"
+            src="./images/WhatsApp Image 2024-01-16 at 17.37.23_3a3b719d.jpg"
+            alt=""
+          />
+          <p class="fs-4 mt-3">Hi, i'm Deepika Dinesh</p>
+          <p class="fw-bold">I'm a fullstack web developer</p>
+        </div>
+      </section>
+
+      <!-- about section -->
+
+      <section class="about">
+        <div class="row">
+          <div class="col-md-6 text-center my-3">
+            <img
+              class="w-75"
+              src="images/WhatsApp Image 2024-01-16 at 17.37.23_3a3b719d.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col-md-6">
+            <p class="fw-bold">ABOUT ME</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum
+              quaerat non voluptate eum ab amet cum ad, perferendis eius
+              molestias quos nisi numquam necessitatibus minus harum quae nemo
+              magnam beatae alias iste minima odio magni. Perspiciatis, nesciunt
+              ex tempore totam qui eveniet cupiditate voluptatibus nam adipisci
+              laudantium debitis facilis illum.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima,
+              illo maiores. Ipsam, quo officiis! Modi porro dicta aperiam sint
+              qui?
+            </p>
+            <button type="button" class="btn btn-dark">MY PROJECTS</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer class="bg-body-tertiary pt-4 pb-3 mt-6">
+      <div class="container d-flex align-items-center">
+        <p class="fs-4 fw-bold">DEEPIKA DINESH</p>
+        <div class="d-flex flex-grow-1 justify-content-between">
+          <ul class="d-flex">
+            <a class="text-decoration-none text-body-emphasis" href="#"
+              ><li class="ps-5 pe-2">Home</li></a
+            >
+            <a
+              class="text-decoration-none text-body-emphasis"
+              href="projects.html"
+              ><li class="pe-3">Projects</li></a
+            >
+            <a class="text-decoration-none text-body-emphasis" href="#"
+              ><li class="pe-3">Blog</li></a
+            >
+          </ul>
+          <ul class="d-flex">
+            <li class="px-2"><i class="bi bi-linkedin"></i></li>
+            <li class="px-2"><i class="bi bi-twitter"></i></li>
+            <li class="px-2"><i class="bi bi-instagram"></i></li>
+            <li class="px-2"><i class="bi bi-github"></i></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
