new changes have made

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
   <body>
     <!-- navbar -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container">
-          <a class="navbar-brand fw-bold" href="#"
-            ><span>#</span>Portfolio<span>#</span></a
-          >
+          <a class="navbar-brand fw-bold" href="#">DEEPIKA</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -42,7 +40,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="projects.html">Projects</a>
+                <a class="nav-link active" href="#projects">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Blog</a>
@@ -98,6 +96,62 @@
           </div>
         </div>
       </section>
+      <!-- projects -->
+      <section id="projects">
+        <div
+          class="y-5 mt-5 d-flex flex-column justify-content-center align-items-center"
+        >
+          <p class="fs-1 fw-bold">MY PROJECTS</p>
+        </div>
+        <div class="row d-flex flex-row justify-content-center">
+          <!-- card1 -->
+          <div class="col-md-4 card me-3 my-2" style="width: 20rem">
+            <img
+              src="./images/Project_expense_tracking_software.webp"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Expense Tracker</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-dark">Check it out</a>
+            </div>
+          </div>
+          <!-- card2 -->
+
+          <div class="col-md-4 card me-3 my-2" style="width: 20rem">
+            <img
+              src="./images/E-commerce-Website-in-uganda.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">E-Commerce site</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-dark">Check it out</a>
+            </div>
+          </div>
+          <!-- card3 -->
+
+          <div class="col-md-4 card me-3 my-2" style="width: 20rem">
+            <img src="./images/netflix.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Netflix Clone</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-dark">Check it out</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer class="bg-body-tertiary pt-4 pb-3 mt-6">
@@ -108,9 +162,7 @@
             <a class="text-decoration-none text-body-emphasis" href="#"
               ><li class="ps-5 pe-2">Home</li></a
             >
-            <a
-              class="text-decoration-none text-body-emphasis"
-              href="projects.html"
+            <a class="text-decoration-none text-body-emphasis" href="#projects"
               ><li class="pe-3">Projects</li></a
             >
             <a class="text-decoration-none text-body-emphasis" href="#"
