--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="#"
-            ><span>#</span> DEEPIKA <span>#</span></a
-          >
+          <a class="navbar-brand fw-bold" href="#">DEEPIKA</a>
           <button
             class="navbar-toggler"
             type="button"
