changes have made

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container">
-          <a class="navbar-brand fw-bold" href="#">DEEPIKA</a>
+          <a class="navbar-brand fw-bold" href="#">Deepika.</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,7 +35,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link active" aria-current="page" href="#home"
                   >Home</a
                 >
               </li>
@@ -52,7 +52,7 @@
     </header>
     <main class="container">
       <!-- Intro section -->
-      <section class="intro">
+      <section class="intro" id="home">
         <div
           class="vh-100 d-flex flex-column justify-content-center align-items-center"
         >
@@ -63,6 +63,21 @@
           />
           <p class="fs-4 mt-3">Hi, i'm Deepika Dinesh</p>
           <p class="fw-bold">I'm a fullstack web developer</p>
+          <!-- tech stack -->
+
+          <div class="icons d-flex">
+            <p class="fw-bold">Tech Stack</p>
+            <img class="techStackImages" src="./images/html-5.png" alt="" />
+            <img class="techStackImages" src="./images/css-3.png" alt="" />
+            <img class="techStackImages" src="./images/js.png" alt="" />
+            <img class="techStackImages" src="./images/physics.png" alt="" />
+            <img class="techStackImages" src="./images/node-js.png" alt="" />
+            <img
+              class="techStackImages"
+              src="./images/mongodb_original_logo_icon_146424.png"
+              alt=""
+            />
+          </div>
         </div>
       </section>
 
@@ -71,11 +86,7 @@
       <section class="about">
         <div class="row">
           <div class="col-md-6 text-center my-3">
-            <img
-              class="w-75"
-              src="images/WhatsApp Image 2024-01-16 at 17.37.23_3a3b719d.jpg"
-              alt=""
-            />
+            <img class="w-75" src="images/my.avif" alt="" />
           </div>
           <div class="col-md-6">
             <p class="fw-bold">ABOUT ME</p>
