--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container">
-          <a class="navbar-brand fw-bold" href="#">Deepika.</a>
+          <a class="navbar-brand fw-bold" href="#">Deepika</a>
           <button
             class="navbar-toggler"
             type="button"
