--- a/index.html
+++ b/index.html
@@ -167,29 +167,35 @@
     </main>
 
     <!-- contact me section -->
-    <section class="contact mt-5" id="contact">
+    <!-- <section class="contact mt-5" id="contact">
       <div class="container">
+        <form action="">
         <p class="fs-4 fw-bold text-center">Let's Talk..</p>
         <div class="contact_form row ms-5">
           <div class="form-field col-md-6">
             <input class="input-text" id="name" type="text" />
             <label for="name" class="label">Name</label>
+            <span id="name_Error"></span>
           </div>
           <div class="form-field col-md-6">
             <input class="input-text" id="email" type="email" />
             <label for="email" class="label">Email</label>
+            <span id="email_Error"></span>
           </div>
           <div class="form-field col-md-6">
             <input class="input-text" id="phone" type="text" />
             <label for="phone" class="label">Contact number</label>
+            <span id="phone_Error"></span>
           </div>
           <div class="form-field col-md-6">
             <input class="input-text" id="company" type="text" />
             <label for="company" class="label">Company Name</label>
+            <span id="company_Error"></span>
           </div>
           <div class="form-field col-md-12">
             <input class="input-text" id="message" type="text" />
             <label for="message" class="label">Message</label>
+            <span id="message_Error"></span>
           </div>
           <div class="form-field col-md-12">
             <input
@@ -199,6 +205,127 @@
             />
           </div>
         </div>
+      </form>
+      </div>
+    </section> -->
+
+    <!-- <section class="contact mt-5" id="contact">
+      <div class="container">
+        <form action="" id="contactForm" method="post" novalidate>
+          <p class="fs-4 fw-bold text-center">Let's Talk..</p>
+          <div class="contact_form row ms-5">
+            <div class="form-field col-md-6">
+              <input class="input-text" id="name" type="text" />
+              <label for="name" class="label">Name</label>
+              <span id="name_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-6">
+              <input class="input-text" id="email" type="email" />
+              <label for="email" class="label">Email</label>
+              <span id="email_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-6">
+              <input class="input-text" id="phone" type="text" />
+              <label for="phone" class="label">Contact number</label>
+              <span id="phone_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-6">
+              <input class="input-text" id="company" type="text" />
+              <label for="company" class="label">Company Name</label>
+              <span id="company_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-12">
+              <input class="input-text" id="message" type="text" />
+              <label for="message" class="label">Message</label>
+              <span id="message_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-12">
+              <input
+                class="submit-btn btn btn-dark"
+                type="submit"
+                value="Submit"
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+    </section> -->
+
+    <section class="contact mt-5" id="contact">
+      <div class="container">
+        <form id="contactForm" action="" method="post" novalidate>
+          <p class="fs-4 fw-bold text-center">Let's Talk..</p>
+          <div class="contact_form row ms-5">
+            <div class="form-field col-md-6">
+              <label for="name" class="label">Name</label>
+              <input
+                class="input-text form-control"
+                id="name"
+                name="name"
+                type="text"
+                aria-describedby="name_Error"
+                onkeyup="validate()"
+                required
+              />
+              <span id="name_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-6">
+              <label for="email" class="label">Email</label>
+              <input
+                class="input-text form-control"
+                id="email"
+                name="email"
+                type="email"
+                aria-describedby="email_Error"
+                required
+              />
+              <span id="email_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-6">
+              <label for="phone" class="label">Contact number</label>
+              <input
+                class="input-text form-control"
+                id="phone"
+                name="phone"
+                type="text"
+                aria-describedby="phone_Error"
+                required
+              />
+              <span id="phone_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-6">
+              <label for="company" class="label">Company Name</label>
+              <input
+                class="input-text form-control"
+                id="company"
+                name="company"
+                type="text"
+                aria-describedby="company_Error"
+                required
+              />
+              <span id="company_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-12">
+              <label for="message" class="label">Message</label>
+              <textarea
+                class="input-text form-control"
+                id="message"
+                name="message"
+                rows="4"
+                aria-describedby="message_Error"
+                required
+              ></textarea>
+              <span id="message_Error" class="error-text"></span>
+            </div>
+            <div class="form-field col-md-12 text-center">
+              <input
+                class="submit-btn btn btn-dark"
+                type="submit"
+                value="Submit"
+              />
+            </div>
+          </div>
+        </form>
       </div>
     </section>
 
@@ -262,6 +389,7 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
