--- a/index.html
+++ b/index.html
@@ -253,19 +253,19 @@
 
     <section class="contact mt-5" id="contact">
       <div class="container">
-        <form id="contactForm" action="" method="post" novalidate>
+        <form id="contactForm" action="#" method="post">
           <p class="fs-4 fw-bold text-center">Let's Talk..</p>
           <div class="contact_form row ms-5">
             <div class="form-field col-md-6">
               <label for="name" class="label">Name</label>
               <input
+                placeholder="Enter your name"
                 class="input-text form-control"
                 id="name"
                 name="name"
                 type="text"
                 aria-describedby="name_Error"
-                onkeyup="validate()"
-                required
+                onkeyup="validateName()"
               />
               <span id="name_Error" class="error-text"></span>
             </div>
@@ -275,9 +275,8 @@
                 class="input-text form-control"
                 id="email"
                 name="email"
-                type="email"
                 aria-describedby="email_Error"
-                required
+                onkeyup="validateEmail()"
               />
               <span id="email_Error" class="error-text"></span>
             </div>
@@ -289,7 +288,7 @@
                 name="phone"
                 type="text"
                 aria-describedby="phone_Error"
-                required
+                onkeyup="validatePhone()"
               />
               <span id="phone_Error" class="error-text"></span>
             </div>
@@ -301,7 +300,7 @@
                 name="company"
                 type="text"
                 aria-describedby="company_Error"
-                required
+                onkeyup="validateCompany()"
               />
               <span id="company_Error" class="error-text"></span>
             </div>
@@ -313,7 +312,7 @@
                 name="message"
                 rows="4"
                 aria-describedby="message_Error"
-                required
+                onkeyup="validateMessage()"
               ></textarea>
               <span id="message_Error" class="error-text"></span>
             </div>
@@ -322,7 +321,9 @@
                 class="submit-btn btn btn-dark"
                 type="submit"
                 value="Submit"
+                onclick="return validation()"
               />
+              <span id="submit_Error"></span>
             </div>
           </div>
         </form>
@@ -389,12 +390,12 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
