login signup pages are added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
               <li class="nav-item">
                 <a class="nav-link active" href="#contact">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="login.html">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="signup.html">Signup</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -78,7 +84,9 @@
               alt=""
             />
           </div>
-          <button type="button" class="btn btn-dark mt-3">Contact me</button>
+          <button id="contactButton" type="button" class="btn btn-dark mt-3">
+            Contact me
+          </button>
         </div>
       </section>
 
@@ -104,7 +112,9 @@
               illo maiores. Ipsam, quo officiis! Modi porro dicta aperiam sint
               qui?
             </p>
-            <button type="button" class="btn btn-dark">MY PROJECTS</button>
+            <button id="projectButton" type="button" class="btn btn-dark">
+              MY PROJECTS
+            </button>
           </div>
         </div>
       </section>
